--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@ Are you sure you want to continue connecting (yes/no)?</code></pre>
 <h2 id="why-am-I-being-asked-to-use-two-factor-authentication-to-log-in-to-the-zoo">Why am I being asked to use two-factor authentication to log in to the Zoo?</h2>
 <p>Over the summer, Yale enabled two-factor authentication for Zoo access. The idea is to increase security by verifying your identity over another channel because a password alone is not very secure (especially for ssh access).</p>
 <p>After entering your password, you will be prompted with three authentication options. Select one by typing in its corresponding number and hitting <code>enter</code>. Then, you'll need to complete the verification request using information forwarded to your mobile device. Once finished, you should be on the Zoo!</p>
+<p>If you use the Yale VPN, you won't have to use 2FA each time you login. Download links and instructions for installation can be found <a href="https://software.yale.edu/software/cisco-vpn-anyconnect"> here</a>.</p>
 <h2 id="how-can-i-transfer-files-and-log-in-remotely-on-a-windows-computer">How can I transfer files and log in remotely on a Windows computer?</h2>
 <p>Either you have Windows 10, or you have Windows &lt;10.</p>
 <ul>
