--- a/Zoo Basics.html
+++ b/Zoo Basics.html
@@ -214,7 +214,7 @@ touch
 <p>Note that the name of each assignment's executable will be given in the spec. For instance, for the zeroth assignment you can run the following:</p>
 <p><code>/c/cs223/bin/testit 0 Hello</code></p>
 <p>Additionally, you can test the files that reside in your CWD by running the following:</p>
-<p><code>/c/cs223/hw&lt;asno&gt;/Tests/test.&lt;executable_name&gt;</code></p>
+<p><code>/c/cs223/hw&lt;asno&gt;/Tests/&lt;executable_name&gt;</code></p>
 <p>Please keep in mind that if you invoke the above command you're running the autograder on the version of your homework that's present in your CWD. If you make a change to those files after submitting and then run the autograder with positive results, the submitted versions of your homework files are outdated and you will need to submit your homework again.</p>
 <p>You can also run individual tests on the files residing in your CWD with the following command:</p>
 <p><code>/c/cs223/hw&lt;asno&gt;/Tests/t&lt;test_number&gt;</code></p>
