--- a/index.html
+++ b/index.html
@@ -276,7 +276,8 @@ done
 <p>From what's printed to <code>stdout</code> we can deduce that version 1.1 existed in the submit directory at the time the assignment was due. (Note, however, that this command will fail if you have another copy/version of <code>file.c</code> in your CWD. If this is the case, rename the <code>file.c</code> in your CWD or simply move to another location in the system file tree.)</p>
 <p>Now, we can <code>revert</code> <code>file.c</code> to the state in which we'd like it to be graded with the following command:</p>
 <code>/c/cs223/bin/revert -r1.1 4 file.c</code>
-<p><b>If you have submitted files to a particular submission directory that do not belong in that submission directory</b>, please note that their timestamps will likely count against you, possibly triggering a lateness penalty.</p>
+
+<p><b>If you have submitted files to a particular submission directory that do not belong in that submission directory––without performing an overwrite</b>, please note that their timestamps will likely count against you, possibly triggering a lateness penalty.</p>
 <p>Please remove these files with the <code>unsubmit</code> command:</p>
 <code>/c/cs223/bin/unsubmit &lt;asno&gt; &lt;filename&gt;</code>
 <p>Once we've cleaned up the submission directory for a particular assignment, we should see only the files we want to be graded after invoking the <code>check</code> command (<code>/c/cs223/bin/check &lt;asno&gt;</code>). Note that the timestamp associated with the <code>RCS</code> directory will not induce a lateness penalty.
